[MacViews] Hook Browser Window Touch Bar

Move browser_window_touch_bar.h/mm to
chrome/browser/ui so it can also be used by MacViews.

Introduced browser_window_touch_bar_delegate.h so that
it can serve as a bridge between BrowserWindowTouchBar
and NativeWidgetMacNSWindow. BrowserFrameMac will create
BrowserWindowTouchBar and pass the NSTouchBar to
NativeWidgetMacNSWindow.

Bug: 841714
Change-Id: I059e8cb2f91bc6fad73393cfb1a59802398bccc9
Reviewed-on: https://chromium-review.googlesource.com/1106599
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569531}