chrome/browser/ui/browser_window_touch_bar_mac.mm
@@ -2,7 +2,7 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#import "chrome/browser/ui/cocoa/browser_window_touch_bar.h"
+#import "chrome/browser/ui/browser_window_touch_bar_mac.h"
 
 #include <memory>
 
