chrome/browser/ui/views/frame/browser_frame_mac.h
@@ -14,6 +14,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 class BrowserFrame;
 class BrowserView;
+@protocol WindowTouchBarDelegate;
 @class ChromeCommandDispatcherDelegate;
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -56,6 +57,7 @@ class BrowserFrameMac : public views::NativeWidgetMac,
   BrowserView* browser_view_;  // Weak. Our ClientView.
   base::scoped_nsobject<ChromeCommandDispatcherDelegate>
       command_dispatcher_delegate_;
+  base::scoped_nsprotocol<id<WindowTouchBarDelegate>> touch_bar_delegate_;
 
   DISALLOW_COPY_AND_ASSIGN(BrowserFrameMac);
 };
